fix more warnings